--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,7 +1,7 @@
 browser=firefox
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
-username=dec2024@opencart.com
-password=Selenium@12345
+username=mehtav4u@gmail.com
+password=admin@123
 headless= false
 incognito=false
-highlight=true
+highlight=false
