--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>Dec2024POMSeries</groupId>
-	<artifactId>Dec2024POMSeries</artifactId>
+	<groupId>POMSeries</groupId>
+	<artifactId>POMSeries</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>Dec2024POMSeries</name>
+	<name>POMSeries</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
@@ -20,7 +20,13 @@
 		<selenium.version>4.31.0</selenium.version>
 	</properties>
 
-
+	<distributionManagement>
+		<snapshotRepository>
+			<id>nexus-snapshots</id>
+			<url>
+				http://admin:admin123@localhost:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<dependencies>
 
@@ -140,8 +146,9 @@
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
-					<!-- 	<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
-					<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<!--
+						<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 					<argLine>
 						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
@@ -158,8 +165,43 @@
 				</dependencies>
 
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.3.0</version>
+
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+			</plugin>
+
 
 		</plugins>
 
 	</build>
 </project>
+
+
+
+
+
