--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
 					
-						<!--<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
+						<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 					<argLine>
@@ -159,7 +159,7 @@
 				</dependencies>
 
 			</plugin>
-		<!--<plugin>
+		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.3.0</version>
@@ -187,7 +187,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
-			</plugin>-->
+			</plugin>
 
 
 		</plugins>
