--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
 					
-						<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
+						<!-- <suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 					<argLine>
