--- a/test-output/old/Opencart App Test Regression Suite/ProductInfo Page Test.properties
+++ b/test-output/old/Opencart App Test Regression Suite/ProductInfo Page Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Search Test_edge][SuiteResult context=Login Page Test_chrome][SuiteResult context=Accounts Page Test_firefox][SuiteResult context=ProductInfo Page Test]
+[SuiteResult context=ProductInfo Page Test][SuiteResult context=Accounts Page Test_chrome][SuiteResult context=Login Page Test_chrome][SuiteResult context=Accounts Page Test_firefox][SuiteResult context=Login Page Test_firefox]
