--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -5,5 +5,5 @@ password=admin@123
 headless= false
 incognito=false
 highlight=false
-remote=true
+remote=false
 huburl:http://localhost:4444/wd/hub
