--- a/test-output/old/Opencart App Test Regression Suite/Accounts Page Test_chrome.properties
+++ b/test-output/old/Opencart App Test Regression Suite/Accounts Page Test_chrome.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Register Page Test][SuiteResult context=Accounts Page Test_chrome][SuiteResult context=Login Page Test_chrome][SuiteResult context=Accounts Page Test_firefox][SuiteResult context=Login Page Test_firefox]
+[SuiteResult context=Register Page Test][SuiteResult context=Login Page Test_firefox][SuiteResult context=Accounts Page Test_chrome][SuiteResult context=Accounts Page Test_firefox][SuiteResult context=Login Page Test_chrome]
