--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -5,5 +5,5 @@ password=admin@123
 headless= false
 incognito=false
 highlight=true
-remote=false
-huburl:http://localhost:4444/wd/hub
+remote=true
+huburl:http://35.183.99.248:4444/wd/hub
