--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -4,6 +4,6 @@ username=mehtav4u@gmail.com
 password=admin@123
 headless= false
 incognito=false
-highlight=true
+highlight=false
 remote=true
 huburl:http://35.183.99.248:4444/wd/hub
